--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "mongoose": "^7.5.3",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
