--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "morgan": "~1.9.1"
   },
